[package]
name = "makerspace-spaceapi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6.1"
clap = { version = "4.0", features = ["derive", "env"] }
kagiyama = "0.2.0"
lazy_static = "1.4.0"
mqtt-channel-client = { version = "0.4.0", features = ["metrics"] }
paho-mqtt = "0.11"
prometheus-client = "0.19"
serde_json = "1.0"
# spaceapi = "0.8.1"
spaceapi = { git = "https://github.com/spaceapi-community/spaceapi-rs.git" }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
